# gEditor

./: README.md  pyproject.toml  scene.json
gEditor_env/: pyvenv.cfg
src/geditor/: app.py  window.py
src/geditor/shapes/: circle.py  groupShape.py  rectangle.py  shape.py  shapeFactory.py  triangle.py  typeShape.py
src/geditor/tools/: autoRotateShape.py  delItem.py  saver.py  undoRedo.py
